--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -12,22 +12,22 @@ body {
 
 .title {
   background: #e3f4ff;
+  font-size: 16px;
   margin-top: 0;
   margin-bottom: 8px;
-  font-size: 16px;
   padding: 8px;
 }
 
 .content {
   background: #e3f4ff;
-  margin-bottom: 8px;
-  padding: 16px 8px;
+  margin: 8px 0;
+  padding: 8px;
 }
 
 .button-container {
   background: #e3f4ff;
-  text-align: center;
   padding: 8px;
+  text-align: center;
 }
 
 button {
@@ -35,5 +35,5 @@ button {
   border: 1px solid #eee;
   display: block;
   margin: 0 auto;
-  padding: 8px 24px;
+  padding: 8px 16px;
 }
